discussion/kv_engine/185020/185020_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: CDC stream backfill with a dropped collection

Primarily add a test that includes a dropped collection in the
scanned history range. This highlighted a problem in the collections
ScanContext as with history enabled the scanAllVersions method will
return both the create and drop of a collection as separate system
events. The isLogicallyDeleted code now needs to be able to distinguish
the create and drop collection events so that a backfill can exclude
the create event if the collection is dropped.

Change-Id: Icd78e81e9106d7c7014e9e7caecf89a948960d24

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-16 15:11:36.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-16 15:12:07.000000000
Message: 
Patch Set 2: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332642/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-16 15:30:25.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/809/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1821:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::Snapshot);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1825:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::History);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1829:60: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                                magma::Magma::SeqIterator::Mode mode) const {
                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2890:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                      magma::Magma::SeqIterator::Mode mode) const;
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30: error: unknown type name "Mode" [clang-diagnostic-error]
                             Mode mode) override;
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/809/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1821:49:
error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/809/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/987/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-kvstore.h(774): error C2039: "Mode": is not a member of "magma::Magma::SeqIterator" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/987/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/780/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/780/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1097/ : FAILURE

Compile error at [2023-01-16T15:16:52.712Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1097/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/815/ : FAILURE

Compile error at [2023-01-16T15:17:07.247Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/815/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/830/ : FAILURE

Compile error at [2023-01-16T15:27:24.102Z] ../kv_engine/engines/ep/tests/module_tests/history_scan_test.cc:45:22:
error: ?MockMagmaKVStore? does not name a type
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/830/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/820/ : FAILURE

Compile error at [2023-01-16T15:21:55.157Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/820/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/829/ : FAILURE

Compile error at [2023-01-16T15:29:48.737Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/829/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/801/ : FAILURE

Compile error at [2023-01-16T15:15:51.782Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/801/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/821/ : FAILURE

Compile error at [2023-01-16T15:24:52.542Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/821/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22189/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
